# pyjb

./: .gitignore  README.md  example.ipynb  package-lock.json  package.json  pyproject.toml  vite.config.js
examples/: lgv.ipynb  sars-cov2-bam.ipynb
examples/data/asm1142v1/: GCF_000011425.1_ASM1142v1_genomic.fna.bgz.gzi
examples/data/sars-cov2/: out.sorted.bam.csi
pyjb/: __init__.py
src/: config.js  config.test.js  index.js  utils.js  utils.test.js
src/vite/: hmr.raw.js  hmrPlugin.js
tests/: test_tracks.py  test_utils.py
