[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyjb"
version = "0.0.1"
dependencies = ["anywidget", "traitlets"]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "jupyter",
    "watchfiles",
    "pytest"
]

[tool.setuptools]
packages  = ["pyjb"]

[tool.setuptool.package-data]
pyjb = ["static/*"]
